@startuml new_srp

class Car {
    - _id : String
    - _model : String
    - _brand : String
    + Car(id : String, model : String, brand : String)
    + getId() : String
    + getModel() : String
    + getBrand() : String
}

class CarManager {
    - _carRepository : CarRepository
    + getFromDb(carId : String) : Car
    + getCarsNames() : String
    + getBestCar() : Car
}

class CarRepository {
    - _carsDb : List<Car>
    + getFromDb(carId : String) : Car
    + getCarsNames() : String
    + getBestCar() : Car
}


CarManager o-- CarRepository 
CarRepository --> Car 

@enduml